# green-spider

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  KRITERIEN.md  LICENSE  Makefile  README.md  cli.py  data_export.py  docker-compose.yaml  index.yaml  job.py  k8s-job-manager.py  pyproject.toml  requirements.txt  result.json  screenshots.py  spider.py  spider_test.py  test.py
.github/: dependabot.yml
checks/: __init__.py  abstract_checker.py  certificate.py  certificate_test.py  charset.py  charset_test.py  config.py  dns_resolution.py  dns_resolution_test.py  domain_variations.py  domain_variations_test.py  duplicate_content.py  duplicate_content_test.py  frameset.py  frameset_test.py  generator.py  green_power.py  green_power_test.py  html_head.py  http_and_https.py  hyperlinks.py  hyperlinks_test.py  load_favicons.py  load_favicons_test.py  load_feeds.py  load_feeds_test.py  load_in_browser.py  load_in_browser_test.py  load_in_mobile_browser.py  mobile_friendliness.py  page_content.py  responsive_layout.py  subdomain_variations.py  url_canonicalization.py  url_reachability.py  url_reachability_test.py
config/: __init__.py
devops/: README.md  deploy-webapp.sh  functions.bash  run-job.sh  run-screenshotter.sh  run-spider.sh  ssh.sh
docs/: CNAME  bundle.js  index.html
export/: __init__.py  datetimeencoder.py
jobs/: __init__.py
kubernetes/: green-spider-createjobs-cronjob.yaml  green-spider-screenshotter-cronjob.yaml  green-spider-screenshotter-job.yaml  green-spider-spider-cronjob.yaml  green-spider-spider-job.yaml  job-example.yaml  psp.yaml
manager/: __init__.py  job_template.yaml
rating/: __init__.py  abstract_rater.py  canonical_url.py  contact_link.py  favicon.py  feeds.py  green_power.py  https.py  mobile_friendliness.py  network_payload.py  network_requests.py  no_network_errors.py  no_script_errors.py  no_third_party_cookies.py  reachable.py  resolvable.py  response_duration.py  (+4 more)
(+12 files in other folders)
