[project]
name = "green-spider"
version = "0.0.0"
description = "Prüft Websites von Bündnis 90/Die Grünen Gliederungen auf Einhaltung ausgewählter Standards."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "beautifulsoup4==4.14.3",
    "cachetools==7.1.1",
    "certifi==2026.4.22",
    "cffi==2.0.0",
    "chardet==7.4.3",
    "charset-normalizer==3.4.7",
    "click==8.3.3",
    "cryptography==44.0.3",
    "cssselect==1.2.0",
    "dnspython==2.8.0",
    "docker==7.1.0",
    "durationpy==0.10",
    "feedparser==6.0.11",
    "gitdb==4.0.12",
    "GitPython==3.1.44",
    "google-api-core==2.23.0",
    "google-auth==2.52.0",
    "google-cloud-core==2.6.0",
    "google-cloud-datastore==2.24.0",
    "google-cloud-storage==2.18.2",
    "google-crc32c==1.8.0",
    "google-resumable-media==2.9.0",
    "googleapis-common-protos==1.75.0",
    "grpcio==1.80.0",
    "grpcio-status==1.71.2",
    "html-similarity==0.3.3",
    "httpretty==1.1.4",
    "idna==3.14",
    "kubernetes==35.0.0",
    "lxml==6.1.0",
    "oauthlib==3.3.1",
    "parsel==1.6.0",  # html-similarity 0.3.3 depends on parsel==1.6.0
    "proto-plus==1.26.1",
    "protobuf==5.29.6",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycparser==2.22",
    "pyOpenSSL==25.0.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.2",
    "PyYAML==6.0.3",
    "redis==7.4.0",
    "requests==2.33.1",
    "requests-oauthlib==2.0.0",
    "responses==0.26.0",
    "rq==2.8.0",
    "rsa==4.9.1",
    "selenium==4.43.0",
    "setuptools==82.0.1",
    "sgmllib3k==1.0.0",
    "six==1.17.0",
    "smmap==5.0.3",
    "smmap2==3.0.1",
    "soupsieve==2.8.3",
    "tenacity==9.1.4",
    "typing-extensions==4.15.0",
    "urllib3==2.7.0",
    "w3lib==2.4.1",
    "websocket-client==1.9.0",
]

[tool.uv]
package = false
